# mswetterbericht

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: pre-commit.yaml
files/: instruments.yaml  prose.yaml
mswetterbericht/: pfostierer.py  prose.json  wetterbericht.py
mswetterbericht/data_providers/: cnbc.py  cnbc_dollar.py  investing_com.py  investing_com_investiny.py  investing_com_investiny_upsidedown.py  investing_com_upsidedown.py  letf_api.py  onvista.py  yahoo_finance.py  yahoo_finance_dollar.py
mswetterbericht/lib/: web.py
mswetterbericht/weather/: weather_com.py
scripts/: msw-pfostierer.sh
