[tool.poetry]
name = "mswetterbericht"
version = "2.0.0"
description = ""
authors = ["Till Wiese <1872304+m3adow@users.noreply.github.com>"]
license = "GNU AGPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.1"
upsidedown = "^0.4"
praw = "^7.6.0"
yfinance = "^0.1.85"
attrs = "^22.1.0"
ruamel-yaml = "^0.17.21"
cloudscraper = "^1.2.65"
js2py = "^0.74"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
